ifc-macros/test/assignop_high_to_untyped.stderr
error: Cannot assign high expression to low variable
 --> $DIR/assignop_high_to_untyped.rs:7:9
  |
7 |         x += y;
  |         ^^^^^^
  |
help: Low Variable
 --> $DIR/assignop_high_to_untyped.rs:7:9
  |
7 |         x += y;
  |         ^
help: High Expression
 --> $DIR/assignop_high_to_untyped.rs:7:14
  |
7 |         x += y;
  |              ^
